@@ -1,3 +1,11 @@
+2004-11-17  Mark D. Baushke  <mdb@cvshome.org>
+
+	* client.c (handle_m, handle_e): Winsock is returning
+	SOCK_ERRNO == WSAENOTSOCK for select() problems and not
+	setting errno. Do not bother with printing an error from a
+	select() that is not returning an non-zero errno.
+	(Report from Conrad T. Pino <Conrad@Pino.com>.)
+
 2004-11-10 Derek Price <derek@ximbiot.com>
 
 	* sanity.sh: Maintain pass/skip/warn status and output at end.
